--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "bcryptjs": "^2.4.3",
     "isbot": "^4.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.10.3",
